# Recipe-Agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
agent(代码系ai生成)/: WEB_README.md  config.json  recipe_ai_agent.py  requirements.txt  start_web.bat  web_server.py
agent(代码系ai生成)/static/css/: style.css
agent(代码系ai生成)/static/js/: app.js
agent(代码系ai生成)/templates/: index.html
backend/: main.py  requirements.txt
backend/routers/: chat.py
docs/superpowers/plans/: 2026-04-08-recipe-agent-restructuring-plan.md
docs/superpowers/specs/: 2026-04-08-recipe-agent-restructuring-design.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue
frontend/src/assets/: main.css
frontend/src/components/: ChatHistory.vue  ChatInput.vue  ChatMessage.vue  QuickActions.vue
frontend/src/stores/: chat.ts
rag_modules/: __init__.py  common.py  graph_rag_retrieval.py  intelligent_query_router.py
src/recipe_agent/: __init__.py  config.py  main.py
src/recipe_agent/agent/: __init__.py  amount_normalizer.py  batch_manager.py  recipe_agent.py
src/recipe_agent/common/: __init__.py  cache.py  llm_service.py  neo4j_client.py
src/recipe_agent/rag/: __init__.py  data_preparation.py  generation.py  graph_rag.py  hybrid_retrieval.py  query_router.py  vector_index.py
web/: README.md  __init__.py  server.py
